src/objects/Commission_Sheet__c.object
<CustomObject>
    <description>Represents a week&apos;s commissions for a salesperson</description>
    <fields>
        <fullName>Double_Commissions_At__c</fullName>
        <defaultValue>7</defaultValue>
        <label>Double Commissions At</label>
        <precision>2</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Multiplier__c</fullName>
        <defaultValue>1</defaultValue>
        <label>Multiplier Percent</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Sales_Manager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sales Manager</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Commission_Sheets</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Sales__c</fullName>
        <label>Sales</label>
        <summaryForeignKey>Commission__c.Commission_Sheet__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Salesperson__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Salesperson</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.Type</field>
                <operation>equals</operation>
                <value>employee</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Commission Sheets</relationshipLabel>
        <relationshipName>Commission_Sheets</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Single_Commissions_At__c</fullName>
        <defaultValue>5</defaultValue>
        <label>Single Commissions At</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Pending</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Approved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rejected</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Paid</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Sub_Total__c</fullName>
        <label>Sub Total</label>
        <summarizedField>Commission__c.Commission_Net__c</summarizedField>
        <summaryForeignKey>Commission__c.Commission_Sheet__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total__c</fullName>
        <formula>IF(Double_Commissions_At__c &lt;= Sales__c, Sub_Total__c * 2, IF(Single_Commissions_At__c &lt;= Sales__c, Sub_Total__c, 0))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Week_Ending__c</fullName>
        <label>Week Ending</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <label>Commission Sheet</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Sales__c</columns>
        <columns>Salesperson__c</columns>
        <columns>Week_Ending__c</columns>
        <columns>Multiplier__c</columns>
        <columns>Sub_Total__c</columns>
        <columns>Total__c</columns>
        <columns>Status__c</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Commission Sheet Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Commission Sheets</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>